# p4-project

./: .gitignore  DEADLINE.md  Dockerfile  Makefile  README.md  TASKS_BACKLOG.md  notes.md  pyproject.toml  todo.md
container/: Dockerfile  Makefile  root-release-bootstrap.sh
container/elasticsearch/: docker-compose.yml
container/grafana-prometheus/: create_env.sh  docker-compose.yml
container/main/: Dockerfile  Makefile  user-common-bootstrap.sh
container/mininet/: Dockerfile
container/p4/: Dockerfile  Makefile
container/p4_mininet/: Dockerfile  Makefile
elastic_server/: README.md
elastic_server/secret/: here.md
elasticsearch/: README.md
grafana/: app.py  config.alloy  podman-compose.yml  prometheus.yml
src/: Makefile  pyproject.toml
src/a/: Makefile  a.p4  notes.md  s1-runtime.json  topology.json
src/aa/: topology.json
src/aa_clone/: basic.p4
src/b/: Makefile  b.p4
src/basic/: Makefile  basic.p4
src/basic2/: basic.p4
src/basic4/: basic.p4
src/basic_custom_header/: basic.p4  basic_debug.p4
src/dev/: Makefile  experiment.py  log_to_elastic.py  make.py  mri.p4  receive.py  runner.py  send.py  topology.json
src/ecn/: ecn.p4
src/helpers/: 1.py  2.py
src/mri/: mri.p4  receive.py  send.py
src/mri2/: Makefile
src/mri_clone/: Makefile  README.md  background_log_to_elastic.py  experiment.py  log_packet.py  mri.p4  receive.py  s1-runtime.json  send.py  topology.json
src/mri_clone_working/: mri.p4
src/mri_clone_working_dev/: Makefile  (+3 more)
utils/: Makefile  p4_mininet.py  p4runtime_switch.py  run_exercise.py
visulazation/: main.py
(+88 files in other folders)
