[project]
name = "p4-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch==8.13.0",
    "mininet>=2.3.0.dev6",
    "prometheus-client>=0.25.0",
    "scapy>=2.7.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
]
leander = [
    "ipykernel>=7.3.0",
]
